--- a/Laptop_price_predictor.ipynb
+++ b/Laptop_price_predictor.ipynb
@@ -26,10 +26,7 @@
     "from sklearn.metrics import r2_score, mean_absolute_error\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor,GradientBoostingRegressor,AdaBoostRegressor,ExtraTreesRegressor\n",
-    "from sklearn.svm import SVR\n",
-    "from xgboost import XGBRegressor"
+    "from sklearn.tree import DecisionTreeRegressor"
    ]
   },
   {
